scrollbar issue fixed

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -21,6 +21,8 @@
     --input-color: hsl(var(--hue-color), 70%, 96%);
     --body-color: hsl(var(--hue-color), 60%, 99%);
     --container-color: #fff;
+    --scroll-bar-color: hsl(var(--hue-color), 12%, 95%);
+    --scroll-thumb-color: hsl(var(--hue-color), 12%, 85%);
     /*========== Font and typography ==========*/
     --body-font: 'Poppins', sans-serif;
     /* .5rem = 8px, 1rem = 16px, 1.5rem = 24px ... */
@@ -1290,7 +1292,7 @@ img {
     .footer__links {
         flex-direction: row;
         column-gap: 2rem;
-/*     }
+        /*     }
     .footer__socials {
         justify-self: flex-end; */
     }
